Rework server flavor picking logic for the better. Allow specific versions to be requested. The flavor used when creating a world will be stuck to.