@@ -19,6 +19,27 @@ SERVER_NAME=$(mdata-get sdc:tags.minecraft)
 MANTA_LOCATION="$MANTA_PREFIX/$SERVER_NAME"
 REMOTE_FILE="$MANTA_LOCATION/server/world.tar.gz"
 MAP_BASE="$MANTA_LOCATION/map/view"
+SERVER_FLAVOR=${SERVER_PREFERRED:-minecraft}
+: ${JAVA_OPTS:=-d64 -Xincgc -Djava.security.egd=/dev/./urandom -XX:-UseVMInterruptibleIO -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=4 -XX:+AggressiveOpts}
+
+case ${SERVER_FLAVOR} in
+  minecraft*)
+    SERVER_JAR="minecraft_server.jar"
+  ;;
+  craftbukkit*)
+    SERVER_JAR="craftbukkit.jar"
+  ;;
+  ftb-ultimate*)
+    SERVER_JAR="ftbserver.jar"
+  ;;
+  voltz*)
+    SERVER_JAR="minecraft_server.jar"
+  ;;
+  *)
+    echo "Undefined Minecraft server flavor!"
+    exit 1
+  ;;
+esac
 
 function fatal {
     echo "$(basename $0): fatal error: $*" >&2
